--- a/css/table-styles.css
+++ b/css/table-styles.css
@@ -8,3 +8,26 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.delete-button {
+    background-color: transparent;
+    float: right;
+    position: relative;
+    height: 20.5px;
+    width: 20.5px;
+    border: none;
+    outline: none;
+}
+
+.delete-button-icon {
+    background-color: transparent;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
