--- a/css/table-styles.css
+++ b/css/table-styles.css
@@ -48,6 +48,8 @@ tbody {
     border-bottom: 2px solid rgba(209, 209, 209, 0.67);
     padding: 20px;
     padding-left: 10px;
+    opacity: 1;
+    transition: opacity 0.6s linear;
 }
 
 .member-name-cell {
