Finished all functionality and styling

--- a/css/table-styles.css
+++ b/css/table-styles.css
@@ -189,6 +189,10 @@ tbody {
     transform: scale(0.95, 0.95);
 }
 
+.member-row {
+    transition: background-color 0.3s
+}
+
 .member-row:hover {
     background-color: #F2F8FF;
 }
