--- a/css/table-styles.css
+++ b/css/table-styles.css
@@ -53,7 +53,8 @@ tbody {
 }
 
 .member-name-cell {
-    width: 25%
+    width: 25%;
+    padding-bottom: 15px! important;
 }
 
 .member-email-cell {
