--- a/css/table-styles.css
+++ b/css/table-styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+
 body {
     font-family: 'Lato';
     color: #344B60
@@ -23,8 +26,9 @@ h1 {
 }
 
 .main-container {
+    box-sizing: border-box;
     background-color: #FBFBFB;
-    width: 90vw;
+    width: 100vw;
     padding: 60px;
 }
 
