--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,100 @@
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+
+body {
+    font-family: 'Lato';
+    color: #344B60
+}
+
+.main-container {
+    box-sizing: border-box;
+    background-color: #FBFBFB;
+    width: 100vw;
+    padding: 60px;
+}
+
+h1 {
+    display: inline-block;
+    font-style: normal;
+    font-weight: 200;
+    font-size: 28px;
+    margin: 0;
+    vertical-align: top;
+}
+
+.add-member-button {
+    position: relative;
+    bottom: 5px;
+    background-color: #CF361E;
+    outline: none;
+    border: none;
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
+    color: white;
+    font-size: 28px;
+    padding-bottom: 5px;
+    display: inline-block;
+    margin-left: 15px;
+    vertical-align: top;
+    box-shadow: none;
+    transform: scale(1, 1);
+    transition: transform 0.2s, box-shadow 0.2s
+}
+
+.add-member-button:hover {
+    box-shadow: 0px 1px 5px 0px rgb(106, 106, 106);
+    transform: scale(1.1, 1.1);
+}
+
+.add-member-button:active {
+    background-color: rgb(165, 58, 42);
+    box-shadow: 0px 0.5px 5px 0px rgb(0, 0, 0);
+    transform: scale(0.95, 0.95);
+}
+
+.members-add-container {
+    padding: 0px;
+    padding-left: 0px;
+    margin-top: 2 0px
+}
+
+.members-active {
+    color: #9B9B9B;
+    font-size: 14px;
+    padding: 20px;
+}
+
+.invite-icon {
+    padding-right: 5px;
+    top: -2px;
+    position: relative;
+}
+
+.invite-button {
+    background-color: transparent;
+    border-radius: 20%;
+    margin-left: 10px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+    font-weight: bold;
+    color: #344B60;
+    transform: scale(1, 1);
+    transition: transform 0.2s
+}
+
+.invite-button:hover {
+    transform: scale(1.1, 1.1);
+    background-color: #F2F8FF;
+}
+
+.invite-button:active {
+    transform: scale(0.95, 0.95);
+}
+
 html {
     color: grey;
     font-size: 1em;
