--- a/css/main.css
+++ b/css/main.css
@@ -24,18 +24,23 @@ h1 {
     vertical-align: top;
 }
 
-.add-member-button {
-    position: relative;
-    bottom: 5px;
-    background-color: #CF361E;
+button {
     outline: none;
     border: none;
+}
+
+.add-member-button {
+    position: relative;
+    bottom: 8px;
+    background-color: #CF361E;
     border-radius: 100%;
     height: 40px;
     width: 40px;
     color: white;
     font-size: 28px;
-    padding-bottom: 5px;
+    font-weight: 200;
+    padding-bottom: 6px;
+    padding-right: 7px;
     display: inline-block;
     margin-left: 15px;
     vertical-align: top;
@@ -77,8 +82,6 @@ h1 {
     background-color: transparent;
     border-radius: 20%;
     margin-left: 10px;
-    border: none;
-    outline: none;
     font-size: 14px;
     font-weight: bold;
     color: #344B60;
